--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,13 @@ plugins {
     id 'com.android.application'
 }
 
+
+
 android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.tryncatch"
+        applicationId "com.igk.tryncatch"
         minSdk 21
         targetSdk 31
         versionCode 1
@@ -36,4 +38,5 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.google.android.gms:play-services-ads:21.1.0'
 }
