--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,10 @@
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
     repositories {
         google()
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
     }
 }
-rootProject.name = "TryNCatch"
+rootProject.name = "Websites & Videos Shortcut"
 include ':app'
